hyperlink and audio
learnt to hyperlink and add audio using html

--- a/first.html
+++ b/first.html
@@ -8,5 +8,13 @@
 <body>
     <h1>Welcome to My Simple HTML Page</h1>
     <p>This is a paragraph of text on my simple HTML page.</p>
+    <a href="https://www.google.com" title="Go to Google" target="_blank">
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo" width="200">
+    </a>
+    <br>
+    
+    <audio controls>
+        <source src="128-Gori Hai Kalaiyan - Mere Husband Ki Biwi 128 Kbps.mp3">
+        Your browser does not support the audio element.
 </body>
 </html>
